# my-ai-practitioner-dev-os

./: CLAUDE.md  MY_STACK.md  README.md  SETUP.md  STACK.md
.claude/: README.md
.claude/agents/: README.md  builder.md  coach.md  evaluator.md  planner.md  researcher.md  reviewer.md
.claude/commands/: README.md  adapt-path.md  add-best-practice.md  catalog.md  debug-learning.md  evaluate.md  harden.md  plan-week.md  publish.md  retro.md  ship-mvp.md  start-week.md  status.md
.claude/hooks/: README.md  post_week_review.sh  pre_publish_check.sh  pre_week_start.sh
.claude/mcp/: README.md  examples.md  safety.md  tool-contracts.md
.claude/mcp/client_examples/: README.md  python_client.py
.claude/mcp/server_stub/: README.md  server.py
.claude/memory/: README.md  best_practices.md  decisions.jsonl  learner_profile.json  progress_log.jsonl
.claude/path-engine/: README.md  adapt.py  evaluate.py  report.py
.claude/skills/: README.md  api-shipping-checklist.md  baseline-model-and-card.md  eda-to-insight.md  experiment-plan.md  forecasting-checklist.md  k8s-deploy-checklist.md  observability-starter.md  rag-with-evals.md
docs/: agents.md  commands.md  hooks.md  how-to-use.md  memory-system.md  skills-playbook.md  system-overview.md
docs/evaluation/: adaptation-rules.md  rubric.md  scoring.md  signals.md
docs/publishing/: how-to-demo.md  how-to-write-medium-post.md  portfolio-checklist.md
examples/mini-example/: README.md  pyproject.toml
examples/mini-example/data/: sample.csv
examples/mini-example/src/: README.md  model.py  predict.py  train.py
examples/mini-example/tests/: README.md  test_model.py
nlp-pipeline/: .gitignore  README.md  demo.py  pyproject.toml
nlp-pipeline/notebooks/: embedding_exploration.ipynb
nlp-pipeline/scripts/: pytorch_foundations.py  run_dashboard.py  run_graphql.py
nlp-pipeline/src/nlp_pipeline/: __init__.py  classifier.py  embeddings.py  lemmatizer.py  pipeline.py  stemmer.py  stopwords.py  tokenizer.py
nlp-pipeline/src/nlp_pipeline/dashboard/: __init__.py  app.py
nlp-pipeline/src/nlp_pipeline/graphql/: __init__.py  app.py  schema.py
nlp-pipeline/tests/: __init__.py  test_classifier.py  test_dashboard.py  test_embeddings.py  test_graphql.py  test_lemmatizer.py  test_pipeline.py  test_stemmer.py  test_stopwords.py  test_tokenizer.py
paths/Advanced/: README.md  tracker.md
paths/Advanced/journal/: 2026-w02.md  2026-w03.md  README.md  monthly-template.md  weekly-template.md
paths/Advanced/month-01/: README.md
paths/Advanced/month-02/: README.md
paths/Advanced/month-03/: README.md
paths/Advanced/month-04/: README.md
paths/Advanced/month-05/: README.md
paths/Advanced/month-06/: README.md
paths/Advanced/month-07/: README.md
paths/Advanced/month-08/: README.md
paths/Advanced/month-09/: README.md
paths/Advanced/month-10/: README.md
paths/Advanced/month-11/: README.md
paths/Advanced/month-12/: README.md
sequence-models/: .gitignore  README.md  pyproject.toml
sequence-models/notebooks/: 01_tensors.ipynb  02_autograd.ipynb  03_feedforward.ipynb  04_dataloader.ipynb  05_week1_summary.ipynb
sequence-models/src/sequence_models/: __init__.py
sequence-models/src/sequence_models/models/: __init__.py  embedding_classifier.py  feedforward.py
sequence-models/src/sequence_models/training/: __init__.py  trainer.py
sequence-models/tests/: __init__.py  test_data.py  test_imports.py  test_models.py  test_training.py
stacks/: tier-1-beginner.md  tier-2-intermediate.md  tier-3-advanced.md  tiers.md
templates/template-data-pipeline/: README.md  pyproject.toml
templates/template-data-pipeline/pipeline/: run.py  validate.py
templates/template-data-pipeline/tests/: test_validate.py
templates/template-eval-harness/: README.md  pyproject.toml
templates/template-eval-harness/datasets/: sample_golden.jsonl
templates/template-eval-harness/evals/: graders.py  run_evals.py
templates/template-eval-harness/tests/: test_graders.py
templates/template-fastapi-service/: Dockerfile  README.md  pyproject.toml
templates/template-fastapi-service/app/: main.py
templates/template-fastapi-service/tests/: test_health.py
templates/template-rag-service/: README.md  pyproject.toml
templates/template-rag-service/eval/: golden_set.jsonl
templates/template-rag-service/rag/: answer.py  ingest.py  retrieve.py
templates/template-rag-service/tests/: test_retrieve.py
