[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nlp-pipeline"
version = "0.1.0"
description = "Text preprocessing and embedding pipeline for NLP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nltk>=3.8,<4.0",
    "numpy>=1.24,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "pytest-cov>=4.0,<6.0",
    "ruff>=0.1.0,<1.0",
]
dashboard = [
    "dash>=2.14,<3.0",
    "plotly>=5.18,<6.0",
    "scikit-learn>=1.3,<2.0",
    "pandas>=2.0,<3.0",
]
graphql = [
    "flask>=3.0,<4.0",
    "graphene>=3.3,<4.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
