[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sequence-models"
version = "0.1.0"
description = "RNN and LSTM sequence models with PyTorch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1,<3.0",
    "numpy>=1.24,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "pytest-cov>=4.0,<6.0",
    "ruff>=0.1.0,<1.0",
]
data = [
    "datasets>=2.14,<3.0",
    "pandas>=2.0,<3.0",
]
notebook = [
    "jupyter>=1.0,<2.0",
    "matplotlib>=3.7,<4.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
