[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-service"
version = "1.0.0"
description = "Retrieval-Augmented Generation service template"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "ruff>=0.1.0,<1.0.0",
]
# Optional: Add real embedding/LLM libraries
embeddings = [
    "sentence-transformers>=2.2.0,<3.0.0",
]
openai = [
    "openai>=1.0.0,<2.0.0",
]

[project.scripts]
rag-ingest = "rag.ingest:main"
rag-answer = "rag.answer:main"

[tool.setuptools.packages.find]
include = ["rag*"]

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.isort]
known-first-party = ["rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
